kata-02/k8s/customer-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-frontend
  template:
    metadata:
      labels:
        app: customer-frontend
    spec:
      containers:
        - name: customer-frontend
          image: your-docker-repo/customer-frontend:1.0.0  # Ersetze dies mit deinem Docker-Image
          ports:
            - containerPort: 3002
