kata-02/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shell-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order-frontend-service
                port:
                  number: 3001
          - path: /customer
            pathType: Prefix
            backend:
              service:
                name: customer-frontend-service
                port:
                  number: 3002
